# face-recog-gallery

./: .gitignore  QUICKSTART.md  README.md  dev-start.ps1
backend/: main.py  requirements.txt
backend/tests/: test_main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
